# pwdlib

./: .gitignore  Cargo.toml  HATCHLING_PYO3_PLUGIN_FIX.md  INTEGRATION_SUMMARY.md  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  copilot-setup-steps.yml  documentation.yml
.zed/: settings.json
docs/: guide.md
docs/reference/: pwdlib.exceptions.md  pwdlib.hashers.md  pwdlib.md  pwdlib.totp.md  pwdlib.zxcvbn.md
pwdlib/: __init__.py  _hash.py  _zxcvbn.pyi  exceptions.py  totp.py
pwdlib/hashers/: __init__.py  argon2.py  base.py  bcrypt.py
pwdlib/zxcvbn/: __init__.py  _zxcvbn.pyi
src/: lib.rs
tests/: test_add.py  test_hash.py  test_totp.py  test_zxcvbn.py
tests/data/: argon2id_large_hash
tests/hashers/: test_argon2.py  test_bcrypt.py
tests/zxcvbn/: test_zxcvbn.py
