[project]
name = "pwdlib"
authors = [
  { name = "pwdlib", email = "fvoron@gmail.com" }
]
description = "Modern password hashing for Python"
readme = "README.md"
dynamic = []
version = "0.3.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
]
requires-python = ">=3.10"
dependencies = [

]

[project.optional-dependencies]
argon2 = [
    "argon2-cffi >=23.1.0,<26",
]
bcrypt = [
    "bcrypt >=4.1.2,<6",
]
zxcvbn = []

[project.urls]
Documentation = "https://frankie567.github.io/pwdlib/"
Source = "https://github.com/frankie567/pwdlib"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "pwdlib._zxcvbn"

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    "maturin>=1.4,<2.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=pwdlib/ --cov-report=term-missing"

[tool.uv]
default-groups = ["dev"]
