[project]
name = "pwdlib"
authors = [
  { name = "pwdlib", email = "fvoron@gmail.com" }
]
description = "Modern password hashing for Python"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = [

]

[project.optional-dependencies]
argon2 = [
    "argon2-cffi >=23.1.0,<26",
]
bcrypt = [
    "bcrypt >=4.1.2,<6",
]

[project.urls]
Documentation = "https://frankie567.github.io/pwdlib/"
Source = "https://github.com/frankie567/pwdlib"

[build-system]
# NOTE: Using hatchling-pyo3-plugin requires a patched version due to a glob pattern bug.
# The fix changes lib_patterns to lib_suffix to avoid creating invalid glob patterns like "lib**.so".
# Issue: hatchling-pyo3-plugin line 136 uses f"lib*{pattern}" where pattern already contains "*".
# Until the fix is published, use: pip install git+https://github.com/frankie567/hatchling-pyo3-plugin@fix-glob-bug
# or manually install the built .so file from target/release/ to pwdlib/_zxcvbn.so for development.
requires = ["hatchling", "hatch-regex-commit", "hatchling-pyo3-plugin"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "pwdlib/__init__.py"

[tool.hatch.build.hooks.pyo3]
# PyO3 Rust extension configuration

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=pwdlib/ --cov-report=term-missing"

[tool.uv]
default-groups = ["dev"]
